--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,9 +138,11 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-fast-image')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':reactlibrary')
 }
 
 // Run this once to be able to run the application with BUCK
