--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'example'
 include ':react-native-fast-image'
 project(':react-native-fast-image').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fast-image/android')
-include ':reactlibrary'
-project(':reactlibrary').projectDir = new File('../lib/android')
+include ':vklist'
+project(':vklist').projectDir = new File('../lib/android')
 
 include ':app'
